assets/background-video-custom.css
.background-video-custom {

}
.background-video-custom .background-video__fallback-img {
    z-index: 1;
}
.template-collection .transparent--true .header--inner:before {
    background: transparent;
}
.background-video-custom .background-video__content {
    max-width: 800px;
}
.background-video__content h3 {
    line-height: 92px;
    font-weight: 700;
}
.background-video__content .description p {
    font-weight: 400;
    font-size: 24px;
    line-height: 32px;
}
.background-video-custom .background-video__content .list-items {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    list-style: none;
    gap: 32px;
    margin: 48px 0px 0px 0px;
}
.background-video-custom .background-video__content .list-items__item {
    display: flex;
    align-items: center;
    gap: 12px;
    font-size: 16px;
    line-height: 24px;
}
.background-video-custom .background-video__content .list-items__item img {
    width: 40px;
    height: 40px;
}

.background-video-custom .background-video__content.content-left {
    margin: 0 auto 0 0;
}
.background-video-custom .background-video__content.content-middle {
    margin: 0 auto;
}
.background-video-custom .background-video__content.content-right {
    margin: 0 0 0 auto;
}
.background-video-custom .background-video__content.alignment-left {
    text-align: left;
}
.background-video-custom .background-video__content.alignment-middle {
    text-align: center;
}
.background-video-custom .background-video__content.alignment-right {
    text-align: right;
}

.background-video-custom .video-lightbox-modal__button-custom {
    background-color: #F79009;
    display: flex;
    align-items: center;
    border-radius: 40px;
    max-width: 100%;
    width: 200px;
    height: 56px;
    color: #fff;
    gap: 8px;
    font-size: 16px;
    line-height: 24px;
    font-weight: 700;
    transition: all .3s;
    border: 1px solid #F79009;
}
.background-video-custom .video-lightbox-modal__button-custom:hover {
    background-color: transparent;
    color: #242528;
}
.background-video-custom .video-lightbox-modal__button-custom:hover svg path {
    fill: #242528;
}
.button_block {
    position: absolute;
    left: 50%;
    bottom: 80px;
    transform: translateX(-50%);
    z-index: 3;
    max-width: 120px;
    width: 100%;
}
.button_block .button_block-link {
    font-size: 16px;
    line-height: 24px;
    height: 56px;
    font-weight: 700;
    width: 100%;
    padding: 0;
}
.button_block .button_block-link.accent {
    border: 1px solid #F79009;
}
.button_block .button_block-link.accent:hover {
    background-color: transparent;
    color: #242528;
}
.video-lightbox-modal__opener .button_block-link {
    display: none;
}
.background-video__fallback-img--mobile {
    display: none;
}
.list-items-mobile {
    display: none;
}
.background-video-custom .background-video__content-wrap {
    height: 100%;
    align-items: center;
}
.background-video-custom .background-video__content {
    height: 100%;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: center;
    position: relative;
}
.background-video-custom .background-video__content .button_block-hero {
    position: absolute;
    left: 0;
    bottom: 80px;
    display: none;
}
.background-video-custom .background-video__content .button_block-hero .button_block-link {
    background-color: transparent;
    color: #F79009;
}
.background-video-custom .background-video__content .button_block-hero .button_block-link:hover {
    background-color: #F79009;
    color: #fff;
}
.video-lightbox-modal__content {
    padding: 16px;
}
.video-lightbox-modal__toggle {
    top: 20px;
    right: 20px;
    z-index: 2;
    background: #fff;
    border-radius: 50%;
}

@media (max-width: 1440px) {
    .background-video-custom .background-video__content .button_block-hero {
        bottom: 8px;
    }
}

@media (max-width: 767px) {
    .background-video-custom .background-video__content .list-items {
        display: none;
    }
    .background-video-custom .background-video__content-wrap {
        height: 100%;
        padding: 78px 16px 16px 16px;
    }
    .button_block {
        display: none;
    }
    .background-video-custom .background-video__content {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }
    .background-video-custom .background-video__content .button_block-hero {
        display: none;
    }
    .video-lightbox-modal__opener {
        /* position: absolute;
        left: 50%;
        transform: translateX(-50%);
        bottom: 16px;    */
        display: flex;
        justify-content: center;
        gap: 15px;
        width: 100%;
    }
    .video-lightbox-modal__opener button {
        max-width: 164px;
        width: 100%;
    }
    .video-lightbox-modal__opener .button_block-link {
        font-size: 14px;
        line-height: 20px;
        height: 56px;
        display: flex;
        padding-left: 0px;
        padding-right: 0px;
        border-radius: 40px;
        max-width: 164px;
        width: 100%;
        font-weight: 700;
        /* position: fixed;
        right: 16px; */
    }
    .background-video-custom .video-lightbox-modal__button-custom {
        font-size: 14px;
        margin: 0;
        font-weight: 700;
        line-height: 20px;
        max-width: 164px;
        width: 100%;
    }
    .background-video-custom .background-video__content.alignment-mobile-left {
        text-align: left;
    }
    .background-video-custom .background-video__content.alignment-mobile-middle {
        text-align: center;
    }
    .background-video-custom .background-video__content.alignment-mobile-right {
        text-align: right;
    }
    .background-video__content h3 {
        line-height: 38px;
        font-size: 30px;
        margin-bottom: 8px;
    }
    .background-video__content .description p {
        font-size: 18px;
        line-height: 28px;
    }
    .background-video__fallback-img {
        display: none;
    }
    .background-video__fallback-img--mobile {
        display: block;
    }
    .video-lightbox-modal__toggle {
        top: -5px;
        right: -5px;
    }
    .list-items-mobile {
        display: flex;
        flex-direction: column;
        margin: 0;
        list-style: none;
        padding: 48px 16px;
        gap: 8px;
    }
    .list-items-mobile .list-items__item {
        background-color: #fff;
        display: flex;
        align-items: center;
        gap: 8px;
        border-radius: 16px;
        padding: 16px;
        font-weight: 600;
        font-size: 16px;
        line-height: 24px;
    }
    .video-lightbox-modal__content {
        padding: 8px;
    }
    .video-lightbox-modal__toggle {
        width: 20px;
        height: 20px;
        top: 12px;
        right: 12px;
        z-index: 2;
        background: #fff;
        border-radius: 50%;
    }
    .video-lightbox-modal__toggle svg {
        width: 10px;
        height: 10px;
    }
}
@media (max-width: 350px) {
    .video-lightbox-modal__opener {
        flex-wrap: wrap;
    }
}

@media (max-height: 750px) {
    .button_block-hero {
        bottom: 16px;
    }
}

